ci: Try to fix certificate issues in deployment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,6 +89,9 @@ jobs:
 
                 FROM ubuntu:latest
 
+                # Install certificate authorities, not included in minimal image
+                RUN apt-get install -y ca-certificates
+
                 # Download required files
                 ADD "${{ github.server_url }}/${{ github.repository }}/releases/latest/download/$COMPONENT" $COMPONENT
                 RUN chmod +x $COMPONENT
