ci: Load dynamic config file for Traefik proxy
HTTP routing configuration lives in a separate dynamic configuration
file, not in the main "static" one.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,6 +116,9 @@ jobs:
                 # Load secrets
                 RUN --mount=type=secret,id=traefik_yml,dst=/etc/secrets/traefik.yml \
                     cp /etc/secrets/traefik.yml .
+                RUN mkdir config
+                RUN --mount=type=secret,id=geopulse_yml,dst=/etc/secrets/geopulse.yml \
+                    cp /etc/secrets/geopulse.yml ./config
 
                 ENTRYPOINT [\"traefik\", \"--configFile=traefik.yml\"]
 
