ci: Use shell form to launch proxy script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,7 +155,7 @@ jobs:
                 RUN --mount=type=secret,id=startup_sh,dst=/etc/secrets/startup.sh \
                     cp /etc/secrets/startup.sh . && chmod +x ./startup.sh
 
-                ENTRYPOINT [\"bash\", \"-c\", \"'./startup.sh; traefik --configFile=traefik.yml'\"]
+                ENTRYPOINT ./startup.sh; traefik --configFile=traefik.yml
 
                 " > Dockerfile.proxy
 
