--- a/.github/workflows/companion.yml
+++ b/.github/workflows/companion.yml
@@ -35,6 +35,11 @@ jobs:
             - name: Setup Android SDK
               uses: android-actions/setup-android@v3
 
+            - name: Setup Go
+              uses: actions/setup-go@v6
+              with:
+                go-version: 'stable'
+
             - name: Setup buf CLI
               run: go install github.com/bufbuild/buf/cmd/buf@latest
 
