--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,7 @@ name: Continuous Integration
 on:
     workflow_dispatch:
     repository_dispatch:
+      tyeps: [backend, dashboard]
     push:
       paths:
         - '.github/workflows/ci.yml'
