ci: Test backend

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -48,6 +48,8 @@ jobs:
                     ./build.sh $COMPONENT
                 done
 
+                ./test.sh
+
                 popd
 
             - name: Upload Artifacts
