--- a/.github/workflows/companion.yml
+++ b/.github/workflows/companion.yml
@@ -67,13 +67,13 @@ jobs:
                 chmod +x ./gradlew
 
                 # Build (Debug mode)
-                ./gradlew --no-daemon assembleDebug
+                ./gradlew --no-daemon :app:assembleDebug
 
                 # Test (Debug mode)
                 ./gradlew --no-daemon :app:testDevDebugUnitTest
 
                 # Lint (Debug mode)
-                ./gradlew --no-daemon lintDebug
+                ./gradlew --no-daemon :app:lintDevDebug
 
                 popd
 
